# game_jam

./: .gitignore  CMakeLists.txt  build.bat  button.cpp  button.h  enemies.cpp  enemies.h  enemies_manager.cpp  enemies_manager.h  enemy.h  flower.cpp  flower.h  game.cpp  pallete.h  rutils.cpp  rutils.h  sprite_sheet.cpp  sprite_sheet.h
assets_refs/: Sprite-0003.aseprite  flower_sprite.aseprite  flower_sprite_sheet.aseprite
gui/: fonts.cpp  gui.cpp  gui.h  gui_private.h  progressbar.cpp  text.cpp
